[project]
name = "flightradar"
version = "0.1.0"
description = ""
authors = [
    {name = "Kerbin Original",email = "aakolomeycev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
tests = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
linters = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
